--- a/lib/generators/bazuro_config.yml
+++ b/lib/generators/bazuro_config.yml
@@ -4,7 +4,7 @@ remote:
   password: 'mypassword'
   filename: 'default_filename'
 local:
-  winword_path: 'C:\Program Files\Microsoft Office\Office15\WINWORD.exe'
-  temp_path: 'C:\Users\Administrator\Temp'
+  winword_path: '"C:/Program Files (x86)/Microsoft Office/Office15/WINWORD.exe"'
+  temp_path: 'C:/Users/acepillo/Temp'
 
 
